--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,10 +14,10 @@ sidebar:
     # Sidebar links
     email: cptksh0710@gmail.com
     phone: +82)010-9962-3135
-    citizenship:
-    website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
-    xing: alandoe
+    citizenship: 없음
+    website: 아직 없음 #do not add http://
+    linkedin: 없음
+    xing: 없음
     github: cptksh0710
     telegram: # add your nickname without '@' sign
     gitlab:
